--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
+    "typeRoots": ["node_modules/@angular/material"],
     "lib": [
       "es2020",
       "dom"
